# p5.cpp

./: .gitignore  CMakeLists.txt
examples/: emtpy_template.cpp
include/: p5.hpp  p5_color.hpp  p5_math.hpp  p5_trig.hpp
include/p5/: p5.hpp
include/p5/core/: Arrays.hpp  Constants.hpp  Files.hpp  Math.hpp  PApplet.hpp  PVector.hpp  Strings.hpp
include/p5/data/: Dict.t.hpp  Iterator.t.hpp  List.t.hpp  Specializations.hpp
include/p5_applet/: papplet.hpp
include/p5_math/: math.hpp  trig.hpp  vector.hpp
lib/: CMakeLists.txt  p5.cpp  p5_math.cpp  p5_trig.cpp  p5_vector.cpp  test.cpp
lib/core/: CMakeLists.txt  Math.cpp  PApplet.cpp  PVector.cpp
lib/data/: CMakeLists.txt
src/p5_math/: p5_math.cpp  p5_trig.cpp  p5_vector.cpp
